# honeytrap-ai

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG_IMPROVEMENTS.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  ROADMAP.md  SECURITY.md  honeytrap.example.yaml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  new_device_profile.md
.github/workflows/: ci.yml  docker.yml  fuzz-nightly.yml
deploy/: README.md  docker-compose.yml  prometheus.yml
deploy/helm/honeytrap-ai/: Chart.yaml  README.md  values-controller.yaml  values-node.yaml  values.yaml
deploy/helm/honeytrap-ai/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  networkpolicy.yaml  pvc.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml
deploy/k8s/: deployment.yaml  kustomization.yaml  namespace.yaml  networkpolicy.yaml  pvc.yaml  service.yaml  servicemonitor.yaml
deploy/systemd/: honeytrap.service  install.sh
docs/: ai.md  api.md  cluster.md  forensics.md  sinks.md  stix.md  taxii.md
docs/protocols/: coap.md  imap.md  mqtt.md  rdp.md
profiles/: database_server.yaml  file_share.yaml  full_enterprise.yaml  iot_camera.yaml  iot_industrial.yaml  mail_server.yaml  web_server.yaml  windows_workstation.yaml
profiles/mailboxes/: full_enterprise.yaml  mail_server.yaml
scripts/: gen_selfsigned.py
src/honeytrap/: __init__.py  __main__.py  cli.py  exceptions.py
src/honeytrap/ai/: __init__.py  adapter.py  cache.py  cli.py  geo_personality.py  intent.py  memory.py  redact.py  responder.py  rule_engine.py
src/honeytrap/ai/adapters/: README.md  __init__.py  base.py  ftp.py  http.py  smtp.py  ssh.py  telnet.py
src/honeytrap/ai/backends/: __init__.py  _http.py  anthropic.py  base.py  ollama.py  openai.py  template.py
src/honeytrap/ai/prompts/: http.txt  smtp.txt  ssh.txt  telnet.txt
src/honeytrap/alerts/: __init__.py  config.py  http_client.py  manager.py  models.py  rules.py  templates.py
src/honeytrap/alerts/channels/: __init__.py  base.py  discord.py  email.py  generic_webhook.py  slack.py  teams.py
src/honeytrap/api/: __init__.py  audit.py  auth.py  cli.py  config.py  errors.py  models.py  openapi.py  rate_limit.py  rbac.py  router.py  server.py  service.py  taxii.py
src/honeytrap/cluster/: __init__.py  api_endpoints.py  cli.py  config.py  controller_fleet.py  node_uplink.py
src/honeytrap/core/: __init__.py  config.py  engine.py  guardian.py  profile.py  rate_limiter.py  sanitizer.py  session.py
src/honeytrap/forensics/: __init__.py  cli.py  pcap.py  recorder.py  timeline.py
src/honeytrap/geo/: __init__.py  resolver.py
src/honeytrap/intel/: __init__.py  attack_mapper.py  ioc_extractor.py
src/honeytrap/intel/stix/: __init__.py  builder.py  mapping.py  patterns.py  serializer.py
src/honeytrap/intel/tls/: __init__.py  certs.py  clienthello.py  database.py  fingerprinter.py  fingerprints.yaml  ja3.py  ja4.py  metrics.py
src/honeytrap/logging/: __init__.py  database.py  manager.py  models.py
src/honeytrap/ops/: __init__.py  health.py
src/honeytrap/protocols/: __init__.py  base.py  coap_handler.py  ftp_handler.py  http_handler.py  imap_handler.py  mqtt_handler.py  mysql_handler.py  rdp_handler.py  smb_handler.py  smtp_handler.py  ssh_handler.py  telnet_handler.py  tls_peek.py
src/honeytrap/reporting/: __init__.py  analyzer.py  charts.py  generator.py  geo_comparison.py  pdf_export.py
src/honeytrap/sinks/: __init__.py  _http.py  batcher.py  cli.py  ecs.py  elasticsearch.py  file_jsonl.py  opensearch.py  pipeline.py  retry.py  sink_base.py  splunk_hec.py
src/honeytrap/ui/: __init__.py  cluster_tui.py  dashboard.py  dashboard_tui.py
templates/ftp/: welcome.txt
templates/http/: admin_generic.html  cpanel.html  directory_listing.html  index.html  phpmyadmin.html  tomcat_manager.html  wp-login.html
tests/: README.md  test_charts.py  test_config.py  test_engine_smoke.py  test_geo_personality.py  test_intel.py  test_logging.py  test_mysql.py  test_profiles.py  test_reporting.py  test_rule_engine.py  test_security.py  test_session.py  test_smtp.py
tests/ai/: __init__.py  conftest.py  test_adapter.py  test_api_memory_endpoint.py  test_backends_anthropic.py  test_backends_ollama.py  test_backends_openai.py  test_backends_template.py  test_cache.py  test_intent.py  test_memory.py  test_redact.py
tests/ai/adapters/: conftest.py  test_adapters_integration.py  test_ftp_adapter.py  test_http_adapter.py  test_smtp_adapter.py  test_telnet_adapter.py
tests/alerts/: test_alerts_config.py  test_channel_errors.py  test_channels.py  test_manager.py  test_models.py  test_rate_limit.py  test_rules.py  test_tls_rules.py
tests/api/: conftest.py  test_alerts.py  test_apikeys_endpoint.py  test_auth.py  test_control.py  test_intel.py  test_intel_stix.py  test_openapi.py  test_rate_limit.py  test_rbac.py  test_security_headers.py  test_server_wire.py  test_sessions.py  test_sinks_endpoints.py
tests/bench/: README.md  __init__.py  conftest.py  test_event_bus_bench.py  test_intent_classifier_bench.py  test_response_cache_bench.py  test_tls_fingerprint_bench.py
tests/cluster/: __init__.py  conftest.py  test_api_endpoints.py  test_cli.py  test_cluster_tui.py  test_config.py  test_controller_fleet.py  test_integration.py  test_node_uplink.py
tests/fixtures/tls/: _build_fixtures.py
tests/forensics/: test_export_cli.py  test_pcap.py  test_recorder.py  test_replay_tui.py  test_sqlite_store.py  test_timeline.py
tests/fuzz/: __init__.py  conftest.py  test_coap_fuzz.py  test_mqtt_fuzz.py  test_rdp_tpkt_fuzz.py  test_stix_roundtrip_fuzz.py  test_tls_clienthello_fuzz.py
tests/intel/stix/: test_builder.py  test_patterns.py
tests/intel/tls/: conftest.py  test_clienthello.py  test_database.py  test_fingerprinter.py  test_ja3.py  test_ja4.py
tests/ops/: test_docker_smoke.py  test_health.py
tests/protocols/: test_coap.py  test_imap.py  test_mqtt.py  test_protocols_registry.py  test_rdp.py  test_tls_peek.py
tests/sinks/: test_cli.py  test_pipeline.py  test_sinks_io.py
tests/ui/: test_dashboard_tui.py
(+1 files in other folders)
