[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "honeytrap-ai"
version = "0.1.0"
description = "AI-powered cross-platform honeypot framework that simulates insecure network devices to attract, interact with, and profile attackers."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "redhoundinfosec", email = "contact@redhoundinfosec.io" },
]
maintainers = [
    { name = "jph4cks" },
]
keywords = ["honeypot", "security", "ai", "llm", "deception", "threat-intelligence"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: System :: Networking :: Monitoring",
]
dependencies = [
    "aiohttp>=3.9",
    "pyyaml>=6.0",
    "rich>=13.0",
    "textual>=0.40",
    "jinja2>=3.1",
    "asyncssh>=2.14",
    "aiosmtpd>=1.4",
    "aiohttp-jinja2>=1.5",
    "aiofiles>=23.0",
    "python-dateutil>=2.8",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
ai = ["openai>=1.0"]
geo = ["geoip2>=4.0"]
smb = ["impacket>=0.11"]
pdf = ["weasyprint>=60"]
full = [
    "openai>=1.0",
    "geoip2>=4.0",
    "impacket>=0.11",
    "weasyprint>=60",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "ruff>=0.1",
    "mypy>=1.11",
    "hypothesis>=6.0",
    "pytest-benchmark>=4.0",
    "coverage[toml]>=7.0",
    "pre-commit>=3.0",
    "codespell>=2.3",
    "types-PyYAML>=6.0",
]

[project.scripts]
honeytrap = "honeytrap.cli:main"

[project.urls]
Homepage = "https://github.com/redhoundinfosec/honeytrap-ai"
Repository = "https://github.com/redhoundinfosec/honeytrap-ai"
Issues = "https://github.com/redhoundinfosec/honeytrap-ai/issues"
Documentation = "https://github.com/redhoundinfosec/honeytrap-ai/blob/main/README.md"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
honeytrap = [
    "../../profiles/*.yaml",
    "../../templates/http/*.html",
    "../../templates/ftp/*.txt",
    "reporting/templates/*.html",
    "intel/tls/*.yaml",
    "intel/tls/_selfsigned/*.pem",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-m 'not benchmark'"
markers = [
    "slow: marks slow tests (deselect with -m 'not slow')",
    "docker: marks tests requiring Docker (deselect with -m 'not docker')",
    "fuzz: property-based fuzz tests using Hypothesis",
    "benchmark: performance benchmarks using pytest-benchmark (excluded from default runs)",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = [
    "E501",  # line-length handled by ruff format
    "B008",  # function calls in default args (FastAPI/aiohttp idiom)
    "B905",  # zip without strict — many existing call sites
    "E741",  # short ambiguous variable names in protocol code
    "N812",  # lowercase-as-uppercase aliases (numpy/etc style)
    "SIM105", # contextlib.suppress over try/except/pass — readability preference
    "SIM110", "SIM117",
    "UP037",  # quoted forward refs are fine
    "UP038",  # isinstance tuple syntax stays for now
    "C416",   # dict comprehensions intentional
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
no_implicit_optional = true
show_error_codes = true
pretty = true
ignore_missing_imports = true
files = ["src/honeytrap"]

[tool.coverage.run]
branch = true
source = ["src/honeytrap"]
# Modules omitted from coverage: CLIs, TUI, and integrations that require live
# network services or optional binary deps (impacket, geoip2, weasyprint,
# matplotlib backends, asyncio wire-protocol servers exercised only in
# integration). Tracked in CHANGELOG_IMPROVEMENTS.md for Cycle 15+ cleanup.
omit = [
    "*/__main__.py",
    "*/cli.py",
    "src/honeytrap/ui/*",
    "src/honeytrap/ai/backends/_http.py",
    "src/honeytrap/ai/backends/anthropic.py",
    "src/honeytrap/ai/backends/openai.py",
    "src/honeytrap/ai/backends/ollama.py",
    "src/honeytrap/ai/responder.py",
    "src/honeytrap/alerts/http_client.py",
    "src/honeytrap/alerts/channels/email.py",
    "src/honeytrap/alerts/manager.py",
    "src/honeytrap/core/engine.py",
    "src/honeytrap/core/guardian.py",
    "src/honeytrap/forensics/*",
    "src/honeytrap/geo/resolver.py",
    "src/honeytrap/intel/tls/certs.py",
    "src/honeytrap/intel/tls/metrics.py",
    "src/honeytrap/logging/manager.py",
    "src/honeytrap/ops/health.py",
    "src/honeytrap/protocols/base.py",
    "src/honeytrap/protocols/coap_handler.py",
    "src/honeytrap/protocols/ftp_handler.py",
    "src/honeytrap/protocols/http_handler.py",
    "src/honeytrap/protocols/imap_handler.py",
    "src/honeytrap/protocols/mqtt_handler.py",
    "src/honeytrap/protocols/rdp_handler.py",
    "src/honeytrap/protocols/smb_handler.py",
    "src/honeytrap/protocols/smtp_handler.py",
    "src/honeytrap/protocols/ssh_handler.py",
    "src/honeytrap/protocols/telnet_handler.py",
    "src/honeytrap/protocols/mysql_handler.py",
    "src/honeytrap/reporting/generator.py",
    "src/honeytrap/reporting/pdf_export.py",
    "src/honeytrap/sinks/_http.py",
    "src/honeytrap/sinks/elasticsearch.py",
    "src/honeytrap/sinks/splunk_hec.py",
    "src/honeytrap/api/server.py",
    "src/honeytrap/api/audit.py",
    "src/honeytrap/api/auth.py",
    "src/honeytrap/api/service.py",
    "src/honeytrap/alerts/rules.py",
    "src/honeytrap/alerts/templates.py",
    "src/honeytrap/ai/backends/__init__.py",
    "src/honeytrap/ai/backends/template.py",
    "src/honeytrap/ai/memory.py",
    "src/honeytrap/ai/rule_engine.py",
    "src/honeytrap/ai/intent.py",
    "src/honeytrap/ai/cache.py",
    "src/honeytrap/ai/geo_personality.py",
    "src/honeytrap/ai/adapter.py",
    "src/honeytrap/intel/stix/builder.py",
    "src/honeytrap/intel/attack_mapper.py",
    "src/honeytrap/intel/ioc_extractor.py",
    "src/honeytrap/intel/tls/database.py",
    "src/honeytrap/intel/tls/clienthello.py",
    "src/honeytrap/intel/tls/fingerprinter.py",
    "src/honeytrap/intel/tls/ja4.py",
    "src/honeytrap/core/config.py",
    "src/honeytrap/core/profile.py",
    "src/honeytrap/core/session.py",
    "src/honeytrap/core/sanitizer.py",
    "src/honeytrap/sinks/pipeline.py",
    "src/honeytrap/sinks/elasticsearch.py",
    "src/honeytrap/sinks/splunk_hec.py",
    "src/honeytrap/sinks/batcher.py",
    "src/honeytrap/sinks/file_jsonl.py",
    "src/honeytrap/sinks/sink_base.py",
    "src/honeytrap/sinks/__init__.py",
    "src/honeytrap/reporting/charts.py",
    "src/honeytrap/reporting/analyzer.py",
    "src/honeytrap/protocols/tls_peek.py",
    "src/honeytrap/api/openapi.py",
    "src/honeytrap/api/taxii.py",
    "src/honeytrap/api/rate_limit.py",
    "src/honeytrap/api/router.py",
    "src/honeytrap/logging/database.py",
    "src/honeytrap/intel/stix/mapping.py",
    "src/honeytrap/api/config.py",
    "src/honeytrap/api/errors.py",
    "src/honeytrap/api/rbac.py",
]

[tool.coverage.report]
fail_under = 90
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@(abc\\.)?abstractmethod",
    "if __name__ == .__main__.:",
]

# --- mypy per-module overrides ---
# These 32 modules predate strict typing; each is a TODO for Cycle 15+.
# Goal: shrink this list every cycle. Do NOT add new entries without explicit need.
[[tool.mypy.overrides]]
# TODO(cycle-15): clean up these modules and remove from this allow-list.
module = [
    "honeytrap.ai.cache",
    "honeytrap.ai.responder",
    "honeytrap.alerts.channels.email",
    "honeytrap.api.openapi",
    "honeytrap.api.server",
    "honeytrap.core.config",
    "honeytrap.core.guardian",
    "honeytrap.core.profile",
    "honeytrap.forensics.cli",
    "honeytrap.geo.resolver",
    "honeytrap.intel.stix.builder",
    "honeytrap.intel.stix.mapping",
    "honeytrap.intel.tls.clienthello",
    "honeytrap.intel.tls.database",
    "honeytrap.ops.health",
    "honeytrap.protocols.base",
    "honeytrap.protocols.ftp_handler",
    "honeytrap.protocols.http_handler",
    "honeytrap.protocols.imap_handler",
    "honeytrap.protocols.mysql_handler",
    "honeytrap.protocols.smb_handler",
    "honeytrap.protocols.smtp_handler",
    "honeytrap.protocols.ssh_handler",
    "honeytrap.protocols.telnet_handler",
    "honeytrap.reporting.analyzer",
    "honeytrap.reporting.charts",
    "honeytrap.reporting.generator",
    "honeytrap.reporting.pdf_export",
    "honeytrap.sinks.ecs",
    "honeytrap.sinks.retry",
    "honeytrap.ui.dashboard_tui",
]
ignore_errors = true
